fixed input tag

--- a/Javascript/Projects/Calculator/index.html
+++ b/Javascript/Projects/Calculator/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="box">
-                <input type="text" placeholder="0" id="inputArea" >   
+                <input type="text" placeholder="0" id="inputArea" disabled>   
                 <div class="buttons">
                     <button onclick="operation('power')"  class="operator">X<sup>x</sup></button>
                     <button onclick="root()"class="operator">&radic;</button>
